# pneuma

./: Cargo.toml  LICENSE  README.md  demo.sqlite
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/elements/: mutations.rs
src/api/notes/: mutations.rs  queries.rs
src/element/: element.rs  fragment.rs  heading.rs  mod.rs  note.rs
src/elements/: mod.rs
src/fragments/: mod.rs
src/gateways/: mod.rs
src/gateways/elements/: mod.rs
src/gateways/tables/: mod.rs
src/gateways/tasks/: mutations.rs  queries.rs
src/generic/: info.rs  json.rs  mod.rs
src/image/: image_mutations.rs  image_queries.rs  mod.rs
src/sql/: mod.rs
src/sql/mutations/: add_elem.sql  add_heading.sql  add_note.sql  add_task.sql  delete_elem.sql
src/sql/queries/: get_heading.sql  get_kind.sql  get_note.sql  get_notes.sql  get_tasks.sql
src/sql/queries/elements/: get_kind.sql
src/sql/tables/: elements.sql  elements_table.sql  headings_table.sql  notes_table.sql  tasks.sql
src/sqlconnection/: mod.rs
src/sqlite_image/: insertables.rs  mod.rs  queries.rs
src/tests/: mod.rs
tests/: element_test.rs  gateways_test.rs
